fix sonar lint issues 2.1.9